[package]
authors = ['librelois <c@elo.tf>']
description = 'duniter pallet universal dividend.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-universal-dividend'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-balances",
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-timestamp/std',
	"serde",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-std/std",
]
try-runtime = ['frame-support/try-runtime']

[dependencies]
# crates.io
codec = { package = 'parity-scale-codec', version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", features = ["derive"], optional = true }

# substrate bencharks
frame-benchmarking = { git = 'https://github.com/duniter/substrate', branch = 'duniter-substrate-v0.9.42', optional = true, default-features = false }
pallet-balances = { git = 'https://github.com/duniter/substrate', branch = 'duniter-substrate-v0.9.42', optional = true, default-features = false }

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

### DOC ###

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


### DEV ###

[dev-dependencies]
serde = { version = "1.0.101", features = ["derive"] }

[dev-dependencies.pallet-balances]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dev-dependencies.sp-core]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dev-dependencies.sp-io]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dev-dependencies.sp-runtime]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'
