[package]
authors = ['librelois <c@elo.tf>']
description = 'primitives for pallet membership.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'sp-membership'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'serde',
    'sp-runtime/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']

[dependencies]

# crates.io
impl-trait-for-tuples = "0.2.1"

# substrate
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.1.5"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.serde]
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

### DOC ###

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
