[package]
authors.workspace = true
description = "primitives for pallet membership"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sp-membership"
readme = "README.md"
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
default-features = false
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime", "sp-runtime/try-runtime"]
runtime-benchmarks = []

[dependencies]

codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
