[package]
name = 'common-runtime'
description = 'Common code shared between all runtimes'
license = 'GPL-3.0-only'
version = '0.8.0-dev'
authors = ['Axiom-Team Developers <https://axiom-team.fr>']
edition = "2021"

[features]
default = ['std']
no_std = []
constant-fees = []
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-system-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    "pallet-babe/runtime-benchmarks",
    'pallet-balances/runtime-benchmarks',
    'pallet-certification/runtime-benchmarks',
    'pallet-offences/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-duniter-wot/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
    'pallet-membership/runtime-benchmarks',
    'pallet-quota/runtime-benchmarks',
    'pallet-provide-randomness/runtime-benchmarks',
    'pallet-im-online/runtime-benchmarks',
    'pallet-universal-dividend/runtime-benchmarks',
    'pallet-oneshot-account/runtime-benchmarks',
    'pallet-multisig/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-preimage/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-upgrade-origin/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-system-benchmarking?/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-authority-members/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-certification/std',
    'pallet-collective/std',
    'pallet-duniter-account/std',
    'pallet-duniter-wot/std',
    'pallet-grandpa/std',
    'pallet-identity/std',
    'pallet-im-online/std',
    'pallet-membership/std',
    'pallet-multisig/std',
    "pallet-offences/std",
    'pallet-oneshot-account/std',
    'pallet-preimage/std',
    'pallet-provide-randomness/std',
    'pallet-proxy/std',
    'pallet-quota/std',
    'pallet-multisig/std',
    "pallet-scheduler/std",
    'pallet-session/std',
    'pallet-smith-members/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-treasury/std',
    'pallet-universal-dividend/std',
    'pallet-upgrade-origin/std',
    'pallet-utility/std',
    'scale-info/std',
    "serde/std",
    'sp-arithmetic/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-membership/std',
    'sp-runtime/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-weights/std',
    'node-primitives/std',
]
try-runtime = [
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'pallet-babe/try-runtime',
    'pallet-balances/try-runtime',
    'pallet-certification/try-runtime',
    'pallet-collective/try-runtime',
    'pallet-duniter-account/try-runtime',
    'pallet-duniter-wot/try-runtime',
    'pallet-grandpa/try-runtime',
    'pallet-identity/try-runtime',
    'pallet-im-online/try-runtime',
    'pallet-membership/try-runtime',
    'pallet-multisig/try-runtime',
    "pallet-offences/try-runtime",
    'pallet-oneshot-account/try-runtime',
    'pallet-preimage/try-runtime',
    'pallet-provide-randomness/try-runtime',
    'pallet-proxy/try-runtime',
    'pallet-quota/try-runtime',
    'pallet-multisig/try-runtime',
    "pallet-scheduler/try-runtime",
    'pallet-session/try-runtime',
    'pallet-smith-members/try-runtime',
    'pallet-sudo/try-runtime',
    'pallet-timestamp/try-runtime',
    'pallet-treasury/try-runtime',
    'pallet-universal-dividend/try-runtime',
    'pallet-upgrade-origin/try-runtime',
    'pallet-utility/try-runtime',
]

[dependencies]

# Crates.io
codec = { package = "parity-scale-codec", version = "3.6.9", features = ["derive"], default-features = false }
duniter-primitives = { path = '../../primitives/duniter', default-features = false }

# substrate benchmarks
frame-system-benchmarking = { git = "https://github.com/duniter/duniter-polkadot-sdk", branch = 'duniter-substrate-v1.6.0', default-features = false, optional = true }
frame-benchmarking = { git = "https://github.com/duniter/duniter-polkadot-sdk", branch = 'duniter-substrate-v1.6.0', default-features = false, optional = true }
frame-support = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
frame-system = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }

# Substrate
pallet-authority-members = { path = '../../pallets/authority-members', default-features = false }
pallet-babe = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-balances = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-certification = { path = '../../pallets/certification', default-features = false }
pallet-collective = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-distance = { path = "../../pallets/distance", default-features = false }
pallet-duniter-account = { path = '../../pallets/duniter-account', default-features = false }
pallet-duniter-wot = { path = '../../pallets/duniter-wot', default-features = false }
pallet-grandpa = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-identity = { path = '../../pallets/identity', default-features = false }
pallet-im-online = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-membership = { path = '../../pallets/membership', default-features = false }
pallet-multisig = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-offences = { path = '../../pallets/offences', default-features = false }
pallet-oneshot-account = { path = '../../pallets/oneshot-account', default-features = false }
pallet-preimage = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-provide-randomness = { path = '../../pallets/provide-randomness', default-features = false }
pallet-proxy = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-quota = { path = '../../pallets/quota', default-features = false }
pallet-scheduler = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-session = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-smith-members = { path = '../../pallets/smith-members', default-features = false }
pallet-sudo = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-timestamp = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-treasury = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
pallet-universal-dividend = { path = '../../pallets/universal-dividend', default-features = false }
pallet-upgrade-origin = { path = '../../pallets/upgrade-origin', default-features = false }
pallet-utility = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.195", default-features = false }
smallvec = { version = "1.13.1", default-features = false }
sp-arithmetic = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
sp-consensus-babe = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
sp-core = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
sp-membership = { path = '../../primitives/membership', default-features = false }
sp-runtime = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }

# TODO: there is a bad coupling in substrate that force to add this dependency
sp-staking = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
sp-std = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
sp-weights = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }
node-primitives = { git = 'https://github.com/duniter/duniter-polkadot-sdk', branch = 'duniter-substrate-v1.6.0', default-features = false }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
